@@ -3,6 +3,7 @@ $Id$
 2009.04.20 [Jacques]
   * Print backtrace if available when exception raised in signal callback.
     Requires ocaml 3.11. (suggested by Bart Jacobs)
+  * Use "val virtual obj" in generated code. Requires ocaml 3.10.
 
 2009.03.19 [Jacques]
   * In GtkAboutDialog, change internal property from "name" to "program-name"
